@@ -23,10 +23,12 @@ import org.opensearch.dataprepper.model.configuration.PipelineDescription;
 import org.opensearch.dataprepper.model.event.Event;
 import org.opensearch.dataprepper.model.record.Record;
 import org.opensearch.dataprepper.plugins.kafka.configuration.AuthConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.TopicConsumerConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.EncryptionConfig;
 import org.opensearch.dataprepper.plugins.kafka.configuration.EncryptionType;
-import org.opensearch.dataprepper.plugins.kafka.configuration.KafkaSourceConfig;
 import org.opensearch.dataprepper.plugins.kafka.configuration.PlainTextAuthConfig;
 import org.opensearch.dataprepper.plugins.kafka.configuration.TopicConfig;
+import org.opensearch.dataprepper.plugins.kafka.extension.KafkaClusterConfigSupplier;
 import org.opensearch.dataprepper.plugins.kafka.util.MessageFormat;
 
 import java.time.Duration;
@@ -65,7 +67,7 @@ public class KafkaSourceMultipleAuthTypeIT {
     private List<TopicConfig> topicList;
 
     @Mock
-    private TopicConfig plainTextTopic;
+    private TopicConsumerConfig plainTextTopic;
 
     @Mock
     private AuthConfig authConfig;
@@ -77,7 +79,10 @@ public class KafkaSourceMultipleAuthTypeIT {
     private PlainTextAuthConfig plainTextAuthConfig;
 
     @Mock
-    private KafkaSourceConfig.EncryptionConfig encryptionConfig;
+    private EncryptionConfig encryptionConfig;
+
+    @Mock
+    private KafkaClusterConfigSupplier kafkaClusterConfigSupplier;
 
     private TopicConfig jsonTopic;
     private TopicConfig avroTopic;
@@ -96,7 +101,7 @@ public class KafkaSourceMultipleAuthTypeIT {
     private String kafkaPassword;
 
     public KafkaSource createObjectUnderTest() {
-        return new KafkaSource(sourceConfig, pluginMetrics, acknowledgementSetManager, pipelineDescription);
+        return new KafkaSource(sourceConfig, pluginMetrics, acknowledgementSetManager, pipelineDescription, kafkaClusterConfigSupplier);
     }
 
     @BeforeEach
@@ -105,7 +110,7 @@ public class KafkaSourceMultipleAuthTypeIT {
         pluginMetrics = mock(PluginMetrics.class);
         counter = mock(Counter.class);
         buffer = mock(Buffer.class);
-        encryptionConfig = mock(KafkaSourceConfig.EncryptionConfig.class);
+        encryptionConfig = mock(EncryptionConfig.class);
         receivedRecords = new ArrayList<>();
         acknowledgementSetManager = mock(AcknowledgementSetManager.class);
         pipelineDescription = mock(PipelineDescription.class);
@@ -123,7 +128,7 @@ public class KafkaSourceMultipleAuthTypeIT {
 
         final String testGroup = "TestGroup_"+RandomStringUtils.randomAlphabetic(6);
         final String testTopic = "TestTopic_"+RandomStringUtils.randomAlphabetic(5);
-        plainTextTopic = mock(TopicConfig.class);
+        plainTextTopic = mock(TopicConsumerConfig.class);
         when(plainTextTopic.getName()).thenReturn(testTopic);
         when(plainTextTopic.getGroupId()).thenReturn(testGroup);
         when(plainTextTopic.getWorkers()).thenReturn(1);
@@ -140,7 +145,7 @@ public class KafkaSourceMultipleAuthTypeIT {
         sslBootstrapServers = System.getProperty("tests.kafka.ssl_bootstrap_servers");
         kafkaUsername = System.getProperty("tests.kafka.username");
         kafkaPassword = System.getProperty("tests.kafka.password");
-        when(sourceConfig.getBootStrapServers()).thenReturn(bootstrapServers);
+        when(sourceConfig.getBootstrapServers()).thenReturn(Collections.singletonList(bootstrapServers));
         when(sourceConfig.getEncryptionConfig()).thenReturn(encryptionConfig);
     }
 
@@ -149,7 +154,7 @@ public class KafkaSourceMultipleAuthTypeIT {
         final int numRecords = 1;
         when(encryptionConfig.getType()).thenReturn(EncryptionType.NONE);
         when(plainTextTopic.getConsumerMaxPollRecords()).thenReturn(numRecords);
-        when(sourceConfig.getTopics()).thenReturn(List.of(plainTextTopic));
+        when(sourceConfig.getTopics()).thenReturn((List) List.of(plainTextTopic));
         when(sourceConfig.getAuthConfig()).thenReturn(null);
         kafkaSource = createObjectUnderTest();
         
@@ -198,14 +203,14 @@ public class KafkaSourceMultipleAuthTypeIT {
         saslAuthConfig = mock(AuthConfig.SaslAuthConfig.class);
         when(encryptionConfig.getType()).thenReturn(EncryptionType.NONE);
         when(plainTextTopic.getConsumerMaxPollRecords()).thenReturn(numRecords);
-        when(sourceConfig.getTopics()).thenReturn(List.of(plainTextTopic));
+        when(sourceConfig.getTopics()).thenReturn((List) List.of(plainTextTopic));
         plainTextAuthConfig = mock(PlainTextAuthConfig.class);
         when(plainTextAuthConfig.getUsername()).thenReturn(kafkaUsername);
         when(plainTextAuthConfig.getPassword()).thenReturn(kafkaPassword);
         when(sourceConfig.getAuthConfig()).thenReturn(authConfig);
         when(authConfig.getSaslAuthConfig()).thenReturn(saslAuthConfig);
         when(saslAuthConfig.getPlainTextAuthConfig()).thenReturn(plainTextAuthConfig);
-        when(sourceConfig.getBootStrapServers()).thenReturn(saslplainBootstrapServers);
+        when(sourceConfig.getBootstrapServers()).thenReturn(Collections.singletonList(saslplainBootstrapServers));
         kafkaSource = createObjectUnderTest();
         
         Properties props = new Properties();
@@ -256,8 +261,8 @@ public class KafkaSourceMultipleAuthTypeIT {
         when(encryptionConfig.getInsecure()).thenReturn(true);
         when(encryptionConfig.getType()).thenReturn(EncryptionType.SSL);
         when(plainTextTopic.getConsumerMaxPollRecords()).thenReturn(numRecords);
-        when(sourceConfig.getBootStrapServers()).thenReturn(sslBootstrapServers);
-        when(sourceConfig.getTopics()).thenReturn(List.of(plainTextTopic));
+        when(sourceConfig.getBootstrapServers()).thenReturn(Collections.singletonList(sslBootstrapServers));
+        when(sourceConfig.getTopics()).thenReturn((List) List.of(plainTextTopic));
         kafkaSource = createObjectUnderTest();
         
         Properties props = new Properties();
@@ -312,8 +317,8 @@ public class KafkaSourceMultipleAuthTypeIT {
         when(encryptionConfig.getInsecure()).thenReturn(true);
         when(encryptionConfig.getType()).thenReturn(EncryptionType.SSL);
         when(plainTextTopic.getConsumerMaxPollRecords()).thenReturn(numRecords);
-        when(sourceConfig.getBootStrapServers()).thenReturn(saslsslBootstrapServers);
-        when(sourceConfig.getTopics()).thenReturn(List.of(plainTextTopic));
+        when(sourceConfig.getBootstrapServers()).thenReturn(Collections.singletonList(saslsslBootstrapServers));
+        when(sourceConfig.getTopics()).thenReturn((List) List.of(plainTextTopic));
         kafkaSource = createObjectUnderTest();
         
         Properties props = new Properties();
