@@ -6,18 +6,6 @@
 package org.opensearch.dataprepper.plugins.kafka.source;
 
 import org.apache.kafka.common.config.ConfigException;
-import org.opensearch.dataprepper.model.buffer.Buffer;
-import org.opensearch.dataprepper.model.record.Record;
-import org.opensearch.dataprepper.model.event.Event;
-import org.opensearch.dataprepper.metrics.PluginMetrics;
-import org.opensearch.dataprepper.model.configuration.PipelineDescription;
-import org.opensearch.dataprepper.plugins.kafka.configuration.KafkaSourceConfig;
-import org.opensearch.dataprepper.plugins.kafka.configuration.SchemaConfig;
-import org.opensearch.dataprepper.plugins.kafka.configuration.TopicConfig;
-import org.opensearch.dataprepper.plugins.kafka.configuration.EncryptionType;
-import org.opensearch.dataprepper.plugins.kafka.util.MessageFormat;
-import org.opensearch.dataprepper.model.acknowledgements.AcknowledgementSetManager;
-
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,19 +14,36 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.opensearch.dataprepper.metrics.PluginMetrics;
+import org.opensearch.dataprepper.model.acknowledgements.AcknowledgementSetManager;
+import org.opensearch.dataprepper.model.buffer.Buffer;
+import org.opensearch.dataprepper.model.configuration.PipelineDescription;
+import org.opensearch.dataprepper.model.event.Event;
+import org.opensearch.dataprepper.model.record.Record;
+import org.opensearch.dataprepper.plugins.kafka.configuration.AuthConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.AwsConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.TopicConsumerConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.EncryptionConfig;
+import org.opensearch.dataprepper.plugins.kafka.configuration.EncryptionType;
+import org.opensearch.dataprepper.plugins.kafka.configuration.SchemaConfig;
+import org.opensearch.dataprepper.plugins.kafka.extension.KafkaClusterConfigSupplier;
+import org.opensearch.dataprepper.plugins.kafka.util.MessageFormat;
 
+import java.time.Duration;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.util.Arrays;
-import java.util.Objects;
-import java.time.Duration;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
@@ -49,7 +54,7 @@ class KafkaSourceTest {
     private KafkaSourceConfig sourceConfig;
 
     @Mock
-    private KafkaSourceConfig.EncryptionConfig encryptionConfig;
+    private EncryptionConfig encryptionConfig;
 
     @Mock
     private PluginMetrics pluginMetrics;
@@ -64,21 +69,24 @@ class KafkaSourceTest {
     private PipelineDescription pipelineDescription;
 
     @Mock
-    TopicConfig topic1, topic2;
+    TopicConsumerConfig topic1, topic2;
 
     @Mock
     private Buffer<Record<Event>> buffer;
 
+    @Mock
+    private KafkaClusterConfigSupplier kafkaClusterConfigSupplier;
+
     private static final String TEST_GROUP_ID = "testGroupId";
 
     public KafkaSource createObjectUnderTest() {
-        return new KafkaSource(sourceConfig, pluginMetrics, acknowledgementSetManager, pipelineDescription);
+        return new KafkaSource(sourceConfig, pluginMetrics, acknowledgementSetManager, pipelineDescription, kafkaClusterConfigSupplier);
     }
 
     @BeforeEach
     void setUp() throws Exception {
         sourceConfig = mock(KafkaSourceConfig.class);
-        encryptionConfig = mock(KafkaSourceConfig.EncryptionConfig.class);
+        encryptionConfig = mock(EncryptionConfig.class);
         pipelineDescription = mock(PipelineDescription.class);
         pluginMetrics = mock(PluginMetrics.class);
         acknowledgementSetManager = mock(AcknowledgementSetManager.class);
@@ -104,8 +112,8 @@ class KafkaSourceTest {
         when(topic2.getAutoCommit()).thenReturn(false);
         when(topic1.getThreadWaitingTime()).thenReturn(Duration.ofSeconds(10));
         when(topic2.getThreadWaitingTime()).thenReturn(Duration.ofSeconds(10));
-        when(sourceConfig.getBootStrapServers()).thenReturn("http://localhost:1234");
-        when(sourceConfig.getTopics()).thenReturn(Arrays.asList(topic1, topic2));
+        when(sourceConfig.getBootstrapServers()).thenReturn(Collections.singletonList("http://localhost:1234"));
+        when(sourceConfig.getTopics()).thenReturn((List) List.of(topic1, topic2));
         when(sourceConfig.getSchemaConfig()).thenReturn(null);
         when(sourceConfig.getEncryptionConfig()).thenReturn(encryptionConfig);
         when(encryptionConfig.getType()).thenReturn(EncryptionType.NONE);
@@ -155,5 +163,51 @@ class KafkaSourceTest {
             .when(kafkaSource)
             .createKafkaConsumer(any(), any());
         kafkaSource.start(buffer);
+    }
+
+    @Test
+    void test_updateConfig_using_kafkaClusterConfigExtension() {
+        final List<String> bootstrapServers = List.of("localhost:9092");
+        final AuthConfig authConfig = mock(AuthConfig.class);
+        final AwsConfig awsConfig = mock(AwsConfig.class);
+        final EncryptionConfig encryptionConfig = mock(EncryptionConfig.class);
+        doNothing().when(sourceConfig).setBootStrapServers(bootstrapServers);
+        doNothing().when(sourceConfig).setAuthConfig(any());
+        doNothing().when(sourceConfig).setAwsConfig(any());
+        doNothing().when(sourceConfig).setEncryptionConfig(any());
+        when(sourceConfig.getAuthConfig()).thenReturn(null);
+        when(sourceConfig.getAwsConfig()).thenReturn(null);
+        when(sourceConfig.getEncryptionConfigRaw()).thenReturn(null);
+        when(sourceConfig.getBootstrapServers()).thenReturn(null);
+        when(kafkaClusterConfigSupplier.getBootStrapServers()).thenReturn(bootstrapServers);
+        when(kafkaClusterConfigSupplier.getAuthConfig()).thenReturn(authConfig);
+        when(kafkaClusterConfigSupplier.getAwsConfig()).thenReturn(awsConfig);
+        when(kafkaClusterConfigSupplier.getEncryptionConfig()).thenReturn(encryptionConfig);
+        kafkaSource = createObjectUnderTest();
+        verify(sourceConfig).setBootStrapServers(bootstrapServers);
+        verify(sourceConfig).setAuthConfig(authConfig);
+        verify(sourceConfig).setAwsConfig(awsConfig);
+        verify(sourceConfig).setEncryptionConfig(encryptionConfig);
+    }
+
+    @Test
+    void test_updateConfig_not_using_kafkaClusterConfigExtension() {
+        final List<String> bootstrapServers = List.of("localhost:9092");
+        final AuthConfig authConfig = mock(AuthConfig.class);
+        final AwsConfig awsConfig = mock(AwsConfig.class);
+        final EncryptionConfig encryptionConfig = mock(EncryptionConfig.class);
+        doNothing().when(sourceConfig).setBootStrapServers(any());
+        doNothing().when(sourceConfig).setAuthConfig(any());
+        doNothing().when(sourceConfig).setAwsConfig(any());
+        doNothing().when(sourceConfig).setEncryptionConfig(any());
+        when(sourceConfig.getAuthConfig()).thenReturn(authConfig);
+        when(sourceConfig.getAwsConfig()).thenReturn(awsConfig);
+        when(sourceConfig.getEncryptionConfigRaw()).thenReturn(encryptionConfig);
+        when(sourceConfig.getBootstrapServers()).thenReturn(bootstrapServers);
+        kafkaSource = createObjectUnderTest();
+        verify(sourceConfig, never()).setBootStrapServers(any());
+        verify(sourceConfig, never()).setAuthConfig(any());
+        verify(sourceConfig, never()).setAwsConfig(any());
+        verify(sourceConfig, never()).setEncryptionConfig(any());
     }
 }
